--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.cubemap filter=lfs diff=lfs merge=lfs -text
 *.lld filter=lfs diff=lfs merge=lfs -text
 *.dylib filter=lfs diff=lfs merge=lfs -text
+lld filter=lfs diff=lfs merge=lfs -text
